<resources>
    <!--<string name="app_name">Generador de actividades</string>-->
    <string name="app_name"> </string>
    <string name="email">Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="nombre_docente">Nombre(s).</string>
    <string name="apellidos_docente">Apellidos.</string>
    <string name="contrasenia_1">Contraseña.</string>
    <string name="contrasenia_2">Confirma contraseña.</string>
    <string name="cct">CCT.</string>
    <string name="nombre_escuela">Nombre de la escuela.</string>
    <string name="grado">Grado.</string>
    <string name="grupo">Grupo.</string>
    <string name="matricula">Matricula.</string>
    <string name="edad">Edad.</string>
    <string name="serial">Serial.</string>
    <string name="registrar">Registrar</string>
    <string name="lista_alumnos">Lista de alumnos</string>
    <string name="lista_docentes">Lista de docentes</string>
    <string name="eliminar">Eliminar</string>
    <string name="Actualizar">Actualizar</string>
    <string name="actualizar_alumno">Actualizacion de alumno</string>
    <string name="actualizar_docente">Actualizacion de docente</string>
    <string name="actualizar_tag">Actualizacion de tags</string>
    <string name="menu_principal">Menu principal</string>
    <string name="ver_actividades">Ver actividades</string>
    <string name="lista_actividades">Lista de actividades</string>
    <string name="registrar_actividad">Registrar actividad</string>
    <string name="agregar_tag">Agregar tag</string>
    <string name="registro_alumnos">REGISTRO DE ALUMNOS</string>
    <string name="registro_tags">REGISTRO DE TAGS</string>
    <string name="registro_actividades">REGISTRO DE ACTIVIDADES</string>
    <string name="registro_docentes">REGISTRO DE DOCENTES</string>
    <string name="sistema_generador_actividades">SISTEMA GENERADOR DE ACTIVIDADES Y REGISTRO DE EVALUACION</string>
    <string name="sistema_generador_contenidos">Sistema Generador de Contenidos y Evaluación para el Nivel Preescolar</string>
    <string name="uagro_conacyt">UAGro-CONACYT-MIIDT</string>
    <string name="asistencia">Asistencia</string>
    <string name="actividades">Actividades</string>
    <string name="evaluacion">Evaluacion</string>
    <string name="registro_de">Registro de:</string>
    <string name="alumnos">Alumnos</string>
    <string name="menu">Menu</string>
    <string name="salir">Salir</string>
    <string name="tags">Tags</string>
    <string name="actividad">Actividad</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="menu_principal_descripcion">Con este sistema podrá el docente llevar a cabo el seguimiento de aprendizajes de estudiantes de 3er grado del nivel Preescolar.</string>
    <string name="id">ID</string>
    <string name="nombre_actividad">Nombre de actividad.</string>
    <string name="momento">Momento.</string>
    <string name="objeto">Objeto.</string>
    <string name="nombre_objeto">Nombre del objeto.</string>
    <string name="lista_tags">Lista de tags.</string>
</resources>
