<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarAlumno"
    android:background="@color/color_morado_background_inicio">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:paddingTop="30dp"
                android:id="@+id/activity_regalu_img"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/img_inicio" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_alumnos"
                android:textColor="@color/color_blanco"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="serif-monospace"
                android:textSize="20dp"/>

            <EditText
                android:background="@color/color_blanco"
                android:id="@+id/txt_matricula_ACT_ALU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
                android:hint="@string/matricula"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:inputType="text"/>

            <EditText
                android:background="@color/color_blanco"
                android:id="@+id/txt_nombre_ACT_ALU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
                android:hint="@string/nombre_docente"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:inputType="text|textCapWords" />

            <EditText
                android:background="@color/color_blanco"
                android:id="@+id/txt_apellidos_ACT_ALU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
                android:hint="@string/apellidos_docente"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:inputType="text|textCapWords"/>

            <EditText
                android:background="@color/color_blanco"
                android:id="@+id/txt_edad_ACT_ALU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
                android:hint="@string/edad"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:inputType="number"/>

            <EditText
                android:background="@color/color_blanco"
                android:id="@+id/txt_serial_ACT_ALU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
                android:hint="@string/serial"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:inputType="text"/>

            <Button
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:id="@+id/btt_actualizar_alumno_ACT_ALU"
                android:textColor="@color/color_blanco"
                android:background="@color/color_verde_1"
                android:text="@string/Actualizar"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>