<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroTags"
    android:background="@color/color_morado_background_inicio">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/LightCyan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingTop="30dp"
                android:src="@drawable/img_inicio" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/registro_tags"
                android:textColor="?android:attr/textColorPrimaryNoDisable"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/txt_serial_REG_TAG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/color_blanco"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/serial"
                android:inputType="text"
                android:text="" />

            <EditText
                android:id="@+id/txt_tag_REG_TAG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/color_blanco"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/nombre_objeto"
                android:inputType="text|textCapWords"
                android:text="" />

            <Button
                android:id="@+id/btt_registrar_REG_TAG"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:background="@color/color_verde_1"
                android:text="@string/registrar"
                android:textColor="@color/color_blanco" />

            <Button
                android:id="@+id/btt_lista_tags_REG_TAG"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:background="@color/color_verde_1"
                android:text="@string/lista_tags"
                android:textColor="@color/color_blanco" />

            <Button
                android:id="@+id/btt_menu_principal_REG_TAG"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:background="@color/color_azul_primary"
                android:text="@string/menu_principal"
                android:textColor="@color/color_blanco" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>