<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActividades"
    android:background="@color/color_morado_background_inicio">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:paddingTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/img_inicio" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_actividades"
                android:textColor="@color/color_blanco"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="serif-monospace"
                android:textSize="20dp"/>

            <EditText
                android:background="@color/color_blanco"
                android:id="@+id/txt_nombre_actividad_REG_ACT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
                android:hint="@string/nombre_actividad"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:inputType="text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_blanco"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp">
                <Spinner
                    android:id="@+id/spinner_momentos_REG_ACT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:gravity="center"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_blanco"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp">
                <Spinner
                    android:id="@+id/spinner_tags_REG_ACT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:gravity="center"
                    android:textAlignment="center"/>
            </LinearLayout>

            <Button
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:id="@+id/btt_menu_principal_REG_ACT"
                android:textColor="@color/color_blanco"
                android:background="@color/color_azul_primary"
                android:text="@string/menu_principal"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp" />

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>